--- a/paper/paper 2/paper 2.tex
+++ b/paper/paper 2/paper 2.tex
@@ -405,6 +405,16 @@ of DLs that we have already introduced.
 	\item Exact Qualified Cardinality Restrictions on Properties
 \end{itemize}
 
+\section{Not Expressible in DL}
+
+\begin{itemize}
+	\item Literal Pattern Matching
+	\item Literal Value Comparison
+	\item Literal Ranges
+	\item Default Values
+	\item language tag cardinality
+\end{itemize}
+
 \bibliography{../../literature/literature}{}
 \bibliographystyle{plain}
 \setcounter{tocdepth}{1}
