--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -379,7 +379,7 @@ When stating axioms and constraints (without reasoning capabilities) needed for 
 the validator is able to determine the expressivity class and thus can recommend constraint languages which can be used to express the wished axioms/constraints. 
 Although, there is a partial ordering of constraint languages for particular expressivity classes, 
 validators may not recommend the constraint language with the highest expressivity of that specific expressivity class.
-The validator compares the constraint languages, which are able to express the needed axioms/constraints, according to multiple user-friendliness classes. \er{I think that language is a bit verbose.}
+The validator compares the constraint languages, which are able to express the needed axioms/constraints, according to multiple user-friendliness classes. \er{I think that language is a bit verbose.}\tb{+1}
 As a consequence, the validator may recommend to express the stated axioms/constraints by a constraint language which is less but enough expressive, and more user-friendly.
 
 %As case studies are linked to use cases and use cases to requirements, it is known how complex the task is to fulfill use cases and case studies.
@@ -409,22 +409,26 @@ This paper serves to answer the two \textbf{research questions}:
 	%\item For which constraints a priori reasoning makes sense and how does reasoning affect their validation?  
 	%\item What are the effects on complexity to express these constraints with and without OWL 2 QL and OWL 2 DL reasoning?
 	%\item What are the effects on complexity of constraints not expressible by DL but by a query language?
-	\item How does reasoning affect the complexity of axioms and constraint languages?
-	\item How to classify constraints and constraint languages according to expressivity, complexity, and user-friendliness?
+	\item How does reasoning affect the complexity of constraints and constraint languages?
+	\item How to classify constraints and constraint languages according to expressivity and complexity?
 \end{itemize}
+\tb{research question also in flow text / like this: ... (research question: How does reasoning affect the complexity of constraints and constraint languages?) }
 
-The \textbf{main contributions} of this paper are:
+The three \textbf{main contributions} of this paper are:
 \begin{itemize}
   %\item We explain why OWL can be used as constraint language
-	\item We show that OWL 2 can be used as a high-level, very expressive, intuitive, and concise constraint language
+	%\item We show that OWL 2 can be used as a high-level, very expressive, intuitive, and concise constraint language
 	\item We explain why reasoning is beneficial for validation and how reasoning interacts with validation
-	\item We describe how to recommend constraint languages according to expressivity, complexity, and user-friendliness
-	\item We explain how to get to lower expressivity and complexity classes for particular validation scenarios 
+	%\item We describe how to recommend constraint languages according to expressivity, complexity, and user-friendliness
+	%\item We explain how to get to lower expressivity and complexity classes for particular validation scenarios 
+	\item We classify constraints according to reasoning (w and w/o) and complexity
+  \item We classify constraint languages according to expressivity ( w and w/o reasoning) and complexity
   %\item We investigate the effects on complexity expressing each constraint
 	%\item We show that OWL 2 QL together with additional constraint languages completely satisfy all RDF validation requirements.
 	%\item We evaluated to which extend the five possible standard constraint languages fulfill each requirement.
 \end{itemize}
 \er{I think after putting 2 pages of motivation, either we should get rid of this itemisation in terms of reshape or reorganise, or embed them inside flowing motivation text. They are so many. }
+\tb{+1 / this should be the 3 main contributions, maybe we should highlight them in the flow text / no itemization}
 \section{Expressivity and Complexity in OWL 2 Reasoning}
 
 \subsection{OWL 2 QL Reasoning}
