--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -133,7 +133,7 @@
   %\vspace{0.3cm}
   \begin{tabular}{l|c|c|c|c|c|c}
   \hline
-  \textbf{constraint} & \textbf{DSP} & \textbf{OWL2-DL} & \textbf{OWL2-QL} & \textbf{ReSh} & \textbf{ShEx} & \textbf{SPIN} \\
+  \textbf{constraint class} & \textbf{DSP} & \textbf{OWL2-DL} & \textbf{OWL2-QL} & \textbf{ReSh} & \textbf{ShEx} & \textbf{SPIN} \\
   \hline
 
 }{
@@ -163,8 +163,8 @@
 
 %
 %
-\title{Recommending RDF Constraint Languages According to Expressivity, Complexity, and User-Friendliness}
-\subtitle{}
+\title{RDF Validation}
+\subtitle{Classification of Constraints and Constraint Languages According to Reasoning, Expressivity, and Complexity}
 %
 \titlerunning{XXXXX}  % abbreviated title (for running head)
 %                                     also used for the TOC unless
@@ -517,26 +517,64 @@ As existential restrictions are part of OWL 2 DL reasoning, the constraint's com
 We evaluated to which extend the most promising five constraint languages fulfill each requirement.
 We also evaluated if a specific requirement is covered by OWL 2 QL or if the more expressive and complex OWL 2 DL is needed \cite{BoschNolleAcarEckert2015}.
 
-\subsection{Classification Dimension Expressivity}
+\subsection{Expressivity}
 
-There are no reserved words for expressivity of constraint languages like LOGSPACE for complexity in computational logic.
-As a consequence, for the expressivity of constraint languages, we need to define our own reserved words.
-As we want to be able to perform reasoning before actually validating the data, we identified four RDF validation expressivity classes, 
-which we define as follows: 
+As we want to be able to perform reasoning before actually validating the data,
+we use the two types of constraints - \ms{Constraints without reasoning} and \ms{Constraints with reasoning} - as criteria to measure constraint-specific expressivity.
+We define these two expressivity classes as follows: 
 
 \begin{itemize}
-	\item \ms{Expr-R-OWL2-QL}: OWL 2 QL reasoning axioms
-	\item \ms{Expr-R-OWL2-DL}: OWL 2 DL reasoning axioms
-	\item \ms{Expr-R}: reasoning axioms not supported by OWL
 	\item \ms{Expr-C}: constraints without reasoning
+	\item \ms{Expr-R}: constraints with reasoning
 \end{itemize}
 
-Reasoning axioms can be used for its original purpose to infer new triples out of explicitly stated triples (see section \ref{sec:rdf-validation-requirements-and-reasoning}), but also to express constraints.
+\ms{Constraints with reasoning} can be used as axioms to infer new triples out of explicitly stated triples (see section \ref{sec:rdf-validation-requirements-and-reasoning}), but also to express constraints.
 If in our knowledge base it is stated that \ms{DarthVader} is a \ms{Sith} (\ms{Sith(DarthVader)}) and that Siths feel the force of the dark side (\ms{Sith $\sqsubseteq$ FeelingForceDarkSide}), it is either possible to infer that \ms{DarthVader} feels the force of the dark side (\ms{FeelingForceDarkSide(DarthVader)}) 
-or to check if this class assignment is explicitly stated in the data without reasoning.  
-
+or to check if this class assignment is explicitly stated in the data without reasoning. 
 Although, there are no reasoning implementations for other constraint languages than OWL 2 available yet, 
-reasoning axioms cannot only be expressed by OWL 2.
+\ms{constraints with reasoning} cannot only be expressed by OWL 2. 
+
+\begin{center}
+\begin{evaluation}
+\ms{Expr-C} (41) & 6 & 18(4) & 7(4) & 8 & 12 & 40(1)\\
+\ms{Expr-R} (33) & 8 & 29 & 11 & 11(2) & 11(1) & 33 \\ 
+\end{evaluation}
+\end{center}
+
+In the table above, the total amount of constraints per constraint class is shown by numbers in round brackets in the first column.
+Numbers in round brackets in the other columns indicate the number of constraints which may be expressed by that particular constraint language - either by limitations, workarounds, or extensions.  
+
+Partial (not necessarily total) orderings are:
+\begin{eqnarray*}
+\ms{Expr-C}: DSP \subset OWL2-QL \subset ReSh \subset ShEx \subset OWL2-DL \subset SPIN \\
+\ms{Expr-R}: DSP \subset OWL2-QL \subset ShEx \subset ReSh \subset OWL2-DL \subset SPIN
+\end{eqnarray*}
+It depends on the use case which constraint language to use in order to fulfill related requirements, i.e. to express associated constraints.
+If, e.g., many \ms{constraints with reasoning} are needed, the constraint language SPIN is the most expressive one.
+If, on the other side, only specific \ms{constraints without reasoning} or \ms{constraints with reasoning} are needed for particular use cases, 
+the relative expressivity of both expressivity classes can be the same for the constraint languages DSP and OWL2-DL, 
+even though the absolute expressivity of OWL2-DL is much higher for both expressivity classes.
+
+%\subsection{Classification Dimension Expressivity [Old]}
+%
+%There are no reserved words for expressivity of constraint languages like LOGSPACE for complexity in computational logic.
+%As a consequence, for the expressivity of constraint languages, we need to define our own reserved words.
+%As we want to be able to perform reasoning before actually validating the data, we identified four RDF validation expressivity classes, 
+%which we define as follows: 
+%
+%\begin{itemize}
+	%\item \ms{Expr-R-OWL2-QL}: OWL 2 QL reasoning axioms
+	%\item \ms{Expr-R-OWL2-DL}: OWL 2 DL reasoning axioms
+	%\item \ms{Expr-R}: reasoning axioms not supported by OWL
+	%\item \ms{Expr-C}: constraints without reasoning
+%\end{itemize}
+%
+%Reasoning axioms can be used for its original purpose to infer new triples out of explicitly stated triples (see section \ref{sec:rdf-validation-requirements-and-reasoning}), but also to express constraints.
+%If in our knowledge base it is stated that \ms{DarthVader} is a \ms{Sith} (\ms{Sith(DarthVader)}) and that Siths feel the force of the dark side (\ms{Sith $\sqsubseteq$ FeelingForceDarkSide}), it is either possible to infer that \ms{DarthVader} feels the force of the dark side (\ms{FeelingForceDarkSide(DarthVader)}) 
+%or to check if this class assignment is explicitly stated in the data without reasoning.  
+%
+%Although, there are no reasoning implementations for other constraint languages than OWL 2 available yet, 
+%reasoning axioms cannot only be expressed by OWL 2.
 
   
   %\begin{table}
@@ -559,35 +597,35 @@ reasoning axioms cannot only be expressed by OWL 2.
 %\end{center}
   %\end{table}
 	
-\begin{center}
-\begin{evaluation}
-\ms{Expr-R-OWL2-QL} (11) & 0 & 11 & 11 & 0(2) & 1 & 11 \\
-\ms{Expr-R-OWL2-DL} (18) & 7 & 18 & 0 & 9 & 8(1) & 18 \\
-\ms{Expr-R} (4) & 1 & 0 & 0 & 2 & 2 & 4 \\ 
-\ms{Expr-C} (41) & 6 & 18(4) & 7(4) & 8 & 12 & 40(1)\\
-\end{evaluation}
-\end{center}
-%\tb{ToDo Thomas: refer to table}
+%\begin{center}
+%\begin{evaluation}
+%\ms{Expr-R-OWL2-QL} (11) & 0 & 11 & 11 & 0(2) & 1 & 11 \\
+%\ms{Expr-R-OWL2-DL} (18) & 7 & 18 & 0 & 9 & 8(1) & 18 \\
+%\ms{Expr-R} (4) & 1 & 0 & 0 & 2 & 2 & 4 \\ 
+%\ms{Expr-C} (41) & 6 & 18(4) & 7(4) & 8 & 12 & 40(1)\\
+%\end{evaluation}
+%\end{center}
+%%\tb{ToDo Thomas: refer to table}
+%
+%
+%In the table above, the total amount of constraints/axioms is shown by numbers in round brackets in the first column.
+%Numbers in round brackets in the other columns indicate the number of constraints/axioms which may be expressed by that particular constraint language - either by limitations, workarounds, or extensions.  
+%
+%OWL 2 DL reasoning axioms are additional reasoning axioms which cannot be expressed by OWL 2 QL. 
+%OWL 2 QL reasoning axioms are not included in the total amount of OWL 2 DL reasoning axioms.
+%There are some reasoning axioms which cannot be expressed by OWL 2 such as class-specific property ranges and class-specific reflexive object properties.
+%
+%Partial (not necessarily total) orderings are:
+%\begin{eqnarray*}
+%\ms{Expr-R-OWL2-QL}: DSP \subset ReSh \subset ShEx \subset SPIN \subseteq OWL2-QL \subseteq OWL2-DL \\
+%\ms{Expr-R-OWL2-DL}: OWL2-QL \subset DSP \subset ShEx \subset ReSh \subset SPIN \subseteq OWL2-DL \\
+%\ms{Expr-R}: OWL2-QL \subseteq OWL2-DL \subset DSP \subset ReSh \subseteq ShEx \subset SPIN \\
+%\ms{Expr-C}: DSP \subset OWL2-QL \subset ReSh \subset ShEx \subset OWL2-DL \subset SPIN
+%\end{eqnarray*}
+%It depends on the use case which constraint language to use to fulfill related requirements, i.e. to express associated constraints.
+%If, for instance, OWL2-QL reasoning is needed the constraint languages OWL2-QL, OWL2-DL, or SPIN are the most expressive ones.
 
-
-In the table above, the total amount of constraints/axioms is shown by numbers in round brackets in the first column.
-Numbers in round brackets in the other columns indicate the number of constraints/axioms which may be expressed by that particular constraint language - either by limitations, workarounds, or extensions.  
-
-OWL 2 DL reasoning axioms are additional reasoning axioms which cannot be expressed by OWL 2 QL. 
-OWL 2 QL reasoning axioms are not included in the total amount of OWL 2 DL reasoning axioms.
-There are some reasoning axioms which cannot be expressed by OWL 2 such as class-specific property ranges and class-specific reflexive object properties.
-
-Partial (not necessarily total) orderings are:
-\begin{eqnarray*}
-\ms{Expr-R-OWL2-QL}: DSP \subset ReSh \subset ShEx \subset SPIN \subseteq OWL2-QL \subseteq OWL2-DL \\
-\ms{Expr-R-OWL2-DL}: OWL2-QL \subset DSP \subset ShEx \subset ReSh \subset SPIN \subseteq OWL2-DL \\
-\ms{Expr-R}: OWL2-QL \subseteq OWL2-DL \subset DSP \subset ReSh \subseteq ShEx \subset SPIN \\
-\ms{Expr-C}: DSP \subset OWL2-QL \subset ReSh \subset ShEx \subset OWL2-DL \subset SPIN
-\end{eqnarray*}
-It depends on the use case which constraint language to use to fulfill related requirements, i.e. to express associated constraints.
-If, for instance, OWL2-QL reasoning is needed the constraint languages OWL2-QL, OWL2-DL, or SPIN are the most expressive ones.
-
-\subsection{Classification Dimension Complexity}
+\subsection{Complexity}
 
 According to our evaluation of requirements to formulate RDF constraints, we identified four main ways of validating constraints assigned to four RDF validation complexity classes:
 
