--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -499,9 +499,9 @@ If we use sub properties with reasoning, the triple (causing a constraint violat
 
 The W3C and DCMI WGs identified in total 74 requirements to formulate RDF constraints\footnote{Two of this paper's authors are actively contributing to these WGs and the process deriving requirements from case studies and use cases is still ongoing.}.
 Bosch et al.\footnote{available at: \url{https://github.com/boschthomas/rdf-validation-research/paper}} explained each requirement in detail and give at least one example for each of them represented by different constraint languages.
-We added mappings to DL in order to logically underpin each requirement and in order to determine which DL constructs are needed to express each constraint.
+We added mappings to DL to logically underpin each requirement and to determine which DL constructs are needed to express each constraint.
 When the DL constructs, needed to express a particular constraint, are known, the expressivity and the complexity of this constraint can be determined. 
-The constraint \ms{Context-Specific Exclusive OR of Properties} (see section~\ref{sec:rdf-validation-requirements-without-reasoning-2}), for example, can generically be expressed as follows:
+The constraint \ms{Context-Specific Exclusive OR of Properties} (see section~\ref{sec:rdf-validation-requirements-without-reasoning-2}), e.g., can generically be expressed as follows:
 \begin{center}
 \begin{DL}
 C &$\sqsubseteq (\neg$ A $\sqcap$ B$) \sqcup ($A $\sqcap \neg$ B$)$ \\
@@ -514,7 +514,7 @@ the constraint's expressivity is calculated as the expressivity of the individua
 The DL constructs \ms{property inclusion}, \ms{complement}, \ms{intersection}, \ms{union}, and \ms{existential restriction} are used to express this constraint.  
 As existential restrictions are part of OWL 2 DL reasoning, the constraint's complexity is \textsc{N2exptime}.
  
-We evaluated to which extend the most promising five constraint languages fulfill each requirement.
+We evaluated to which extend the most promising five constraint languages fulfill each requirement to formulate RDF constraints.
 We also evaluated if a specific requirement is covered by OWL 2 QL or if the more expressive and complex OWL 2 DL is needed \cite{BoschNolleAcarEckert2015}.
 
 \subsection{Expressivity}
