--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -488,6 +488,34 @@ If we use sub properties with reasoning, the triple (causing a constraint violat
 
 \subsection{Complexity}
 
+According to our evaluation of requirements to formulate RDF constraints, we identified four main ways of validating the two constraint classes \ms{constraints without reasoning} and \ms{constraints with reasoning} assigned to four RDF validation complexity classes:
+
+\begin{itemize}
+	\item \ms{C-C}: validation by query answering without reasoning
+	\item \ms{C-R-OWL2-QL}: validation by query answering with OWL 2 QL reasoning
+	\item \ms{C-R-OWL2-DL}: validation by query answering with OWL 2 DL reasoning
+	\item \ms{C-R}: validation by query answering with reasoning
+\end{itemize}
+
+The complexity class \ms{C-R} encompasses all \ms{constraints with reasoning} for which reasoning can be executed but cannot be expressed by OWL 2.  
+The next table gives an overview of the computational complexity for RDF validation when reasoning is performed and when reasoning is not performed in ascending complexity ordering. 
+\begin{center}
+\begin{complexity}
+\ms{C-C} & \textsc{Pspace}-Complete \\
+\ms{C-R-OWL2-QL} & \textsc{Ptime} \\
+\ms{C-R-OWL2-DL} & \textsc{N2exptime} \\
+\ms{C-R} & \textsc{N2exptime} \\
+\end{complexity}
+\end{center}
+What is considered by RDF validation w/o reasoning, corresponds to performing SPARQL queries.  It is known that performing SPARQL queries is in \textsc{Pspace}-Complete \cite{Perez2009}. Since OWL 2 profiles are based on \textit{DL-Lite} family and query answering in OWL 2 QL is in \textsc{LogSpace} (or rather in AC$^0$ ) \cite{Calvanese2007}, so is the constraint validation by queries with  reasoning. Furthermore, TBox reasoning in OWL 2 QL is in \textsc{Ptime} \cite{Calvanese2007}, hence complete query rewriting as well as combined complexity (reasoning and than querying) is in \textsc{Ptime} \cite{Artale2009,Calvanese2007}.  With the more expressive profile OWL 2 DL, reasoning is in \textsc{N2exptime} \cite{owl2profiles2008} which is a class of considerably higher complexity.
+
+As, e.g, the constraint \ms{cardinality shortcuts} is associated with the complexity class \ms{C-R} and OWL2 DL reasoning can be done on cardinality restrictions,
+the complexity of \ms{C-R} is in \textsc{N2exptime} as well. 
+The complexity classes' partial ordering is:
+\begin{eqnarray*}
+\ms{C-C} \subset \ms{C-R-OWL2-QL} \subset \ms{C-R} \subseteq \ms{C-R-OWL2-DL}
+\end{eqnarray*}
+
 \section{Classification of Constraint Languages according to Expressivity and Complexity}
 
 %We divide these constraints into three classes:
@@ -627,33 +655,7 @@ even though the absolute expressivity of OWL2-DL is much higher for both express
 
 \subsection{Complexity}
 
-According to our evaluation of requirements to formulate RDF constraints, we identified four main ways of validating constraints assigned to four RDF validation complexity classes:
 
-\begin{itemize}
-	\item \ms{C-C}: validation by query answering without reasoning
-	\item \ms{C-R-OWL2-QL}: validation by query answering with OWL 2 QL reasoning
-	\item \ms{C-R-OWL2-DL}: validation by query answering with OWL 2 DL reasoning
-	\item \ms{C-R}: validation by query answering with reasoning
-\end{itemize}
-
-The complexity class \ms{C-R} encompasses all axioms for which reasoning can be executed but cannot be expressed by OWL 2.  
-Next table gives an overview of the computational complexity for RDF validation when reasoning is performed and when reasoning is not performed. 
-\begin{center}
-\begin{complexity}
-\ms{C-C} & \textsc{Pspace}-Complete \\
-\ms{C-R-OWL2-QL} & \textsc{Ptime} \\
-\ms{C-R-OWL2-DL} & \textsc{N2exptime} \\
-\ms{C-R} & \textsc{N2exptime} \\
-\end{complexity}
-\end{center}
-What is considered by RDF validation w/o reasoning, corresponds to performing SPARQL queries.  It is known that performing SPARQL queries is in \textsc{Pspace}-Complete \cite{Perez2009}. Since OWL 2 profiles are based on \textit{DL-Lite} family and query answering in OWL 2 QL is in \textsc{LogSpace} (or rather in AC$^0$ ) \cite{Calvanese2007}, so is the constraint validation by queries with  reasoning. Furthermore, TBox reasoning in OWL 2 QL is in \textsc{Ptime} \cite{Calvanese2007}, hence complete query rewriting as well as combined complexity (reasoning and than querying) is in \textsc{Ptime} \cite{Artale2009,Calvanese2007}.  With the more expressive profile OWL 2 DL, reasoning is in \textsc{N2exptime} \cite{owl2profiles2008} which is a class of considerably higher complexity.
-
-As, for example, the constraint \ms{cardinality shortcuts} is associated with the complexity class \ms{C-R} and OWL2 DL reasoning can be done on cardinality restrictions,
-the complexity of \ms{C-R} is in \textsc{N2exptime} as well. 
-The complexity classes' partial ordering is:
-\begin{eqnarray*}
-\ms{C-C} \subset \ms{C-R-OWL2-QL} \subset \ms{C-R} \subseteq \ms{C-R-OWL2-DL}
-\end{eqnarray*}
 
 \subsection{Classification Dimension User-Friendliness}
 
